[package]
name = "lofi_tray"
version = "1.0.0"
authors = ["Geml"]
description = "youtube lofi girl stream"
repository = "https://github.com/Anton-Euro/lofi-tray"
license = "MIT"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
m3u8-rs = "5.0.5"
reqwest = {version = "0.11.23", features = ["blocking"]}
tray-icon = "0.11.1"
image = "0.24.6"
winit = "0.29.7"

[build-dependencies]
winres = "0.1"